manifests/portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-app
  namespace: portfolio
  labels:
    app: portfolio
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1      
      maxUnavailable: 0 
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      affinity:
          podAntiAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: portfolio
                topologyKey: "kubernetes.io/hostname"
      securityContext:
          runAsNonRoot: true
          runAsUser: 1000

      containers:
      - name: portfolio
        image: ghcr.io/k5sha/me:d64d470
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5  
          periodSeconds: 5        
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15 
          periodSeconds: 20
        resources:
         requests:
            memory: "128Mi"
            cpu: "125m"
         limits:
            memory: "256Mi"  
            cpu: "250m"
